@@ -3,5 +3,5 @@ glibc-branch := fedora
 glibc-base := HEAD
 DIST_BRANCH := devel
 COLLECTION := dist-f8
-fedora-sync-date := 2008-03-10 16:51 UTC
-fedora-sync-tag := fedora-glibc-20080310T1651
+fedora-sync-date := 2008-03-14 17:32 UTC
+fedora-sync-tag := fedora-glibc-20080314T1732
